# snrg-whatsapp

./: MANIFEST.in  README.md  api.py  hooks.py  pyproject.toml  setup.py  site_config_example.json
snrg_whatsapp/: api.py  hooks.py  modules.txt  patches.txt
snrg_whatsapp/config/: desktop.py
snrg_whatsapp/patches/v0_0_1/: add_cash_discount_reminder_fields.py  add_quotation_confirmation_fields.py  hide_quotation_confirmation_debug_fields.py  populate_cash_discount_settings_defaults.py  populate_whatsapp_settings_defaults.py  reposition_quotation_confirmation_fields.py
snrg_whatsapp/public/: build.json
snrg_whatsapp/public/js/: document_whatsapp.js  quotation.js  sales_invoice.js  snrg_whatsapp_ui.js
snrg_whatsapp/snrg_whatsapp/doctype/snrg_whatsapp_settings/: snrg_whatsapp_settings.json  snrg_whatsapp_settings.py
