[project]
name = "snrg_whatsapp"
version = "0.0.1"
authors = [
    { name = "SNRG", email = "hello@example.com"}
]
description = "SNRG WhatsApp Integration"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "requests",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
