[project]
name = "snrg_whatsapp"
version = "0.0.1"
authors = [
    { name = "SNRG", email = "hello@example.com"}
]
description = "SNRG WhatsApp Integration"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "requests",
]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
snrg_whatsapp = ">=15.0.0,<17.0.0"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["snrg_whatsapp*"]
